Fixed footer issue that made text get out of place

--- a/recipes/italian_chicken_marinade.css
+++ b/recipes/italian_chicken_marinade.css
@@ -257,6 +257,10 @@ footer {
     .ingredients {
         padding: 0 5rem;
     }
+
+    .page-information ul {
+        gap: 5rem;
+    }
 }
 
 /* MEDIA QUERIES SECTION END */
